welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while()
}

def avancer(){
  for (i<-0 to 6)
  avance()
  gauche()
  avance()
  gauche()
  for (i<-0 to 6)
  avance()
  droite()
  avance()
  droite()
}